aws_configs/us-east-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-006e02fb1133e441c",
     "RouteTableId": "rtb-0d9264c7a557cc64b"
    }
   ],
   "OwnerId": "133950710413",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0d9264c7a557cc64b",
   "Routes": [
    {
     "DestinationCidrBlock": "10.0.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationIpv6CidrBlock": "2600:1f18:6089:c800::/56",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-0a1ee4235a7f05f3f"
  }
 ]
}
