aws_configs/us-east-1/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "launch-wizard-1 created 2021-02-17T20:16:09.181+08:00",
   "GroupId": "sg-001e71bec4709b1e8",
   "GroupName": "launch-wizard-1",
   "IpPermissions": [
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": ""
      }
     ],
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0",
       "Description": ""
      }
     ],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0"
      }
     ],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "133950710413",
   "VpcId": "vpc-0a1ee4235a7f05f3f"
  },
  {
   "Description": "launch-wizard-2 created 2021-02-17T20:18:53.594+08:00",
   "GroupId": "sg-0712a7b9a3867a553",
   "GroupName": "launch-wizard-2",
   "IpPermissions": [
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0"
      }
     ],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0"
      }
     ],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "133950710413",
   "VpcId": "vpc-0a1ee4235a7f05f3f"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-0932b7582f3ea0040",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-0932b7582f3ea0040",
       "UserId": "133950710413"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0"
      }
     ],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "133950710413",
   "VpcId": "vpc-0a1ee4235a7f05f3f"
  }
 ]
}
